--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   shared_preferences: ^2.0.15
   http: ^0.13.5
   d_method: ^0.0.9
-  intl: ^0.18.0
+  intl: ^0.17.0
   d_view: ^0.0.3
   d_info: ^0.0.7
+  d_chart: ^0.0.4
 
 dev_dependencies:
   flutter_test:
