--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   d_info: ^0.0.7
   d_chart: ^0.0.4
   d_input: ^0.0.2
+  flutter_launcher_icons: ^0.11.0
+  flutter_screenutil: ^5.6.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +58,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "asset/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
